--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   width: 100px;
   cursor: pointer;
   margin: 30px 0;
+  display: none;
 }
 
 .menu-icon {
@@ -126,4 +127,57 @@ button:hover {
 }
 .col2 .controller {
   width: 90%;
+}
+.color-box {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: linear-gradient(#ff54a2, #ff575a);
+  border-radius: 20px 0 0 20px;
+  height: 100%;
+  width: 80%;
+  z-index: -1;
+  transform: translate(150px);
+}
+.add-btn img {
+  width: 35px;
+  margin-bottom: 5px;
+}
+.add-btn {
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+}
+.social-links img {
+  height: 13px;
+  margin: 20px;
+  cursor: pointer;
+}
+
+.social-links {
+  text-align: center;
+}
+
+@media only screen and (max-width: 700px) {
+  nav ul {
+    width: 100%;
+    background: linear-gradient(#ff54a2, #ff575a);
+    position: absolute;
+    top: 75px;
+    right: 0;
+    z-index: 2;
+  }
+
+  nav ul li {
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  nav ul li a {
+    color: #fff;
+  }
+
+  .menu-icon {
+    display: block;
+  }
 }
