--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@
   width: 100px;
   cursor: pointer;
   margin: 30px 0;
-  display: none;
 }
 
 .menu-icon {
   width: 25px;
   cursor: pointer;
+  display: none;
 }
 nav {
   flex: 1;
@@ -163,7 +163,7 @@ button:hover {
     width: 100%;
     background: linear-gradient(#ff54a2, #ff575a);
     position: absolute;
-    top: 75px;
+    top: 100px;
     right: 0;
     z-index: 2;
   }
@@ -179,5 +179,34 @@ button:hover {
 
   .menu-icon {
     display: block;
+  }
+
+  #menuList {
+    overflow: hidden;
+    transition: 0.5s;
+  }
+  .row {
+    flex-direction: column-reverse;
+    margin: 50px 0;
+  }
+
+  .col2 {
+    flex-basis: 100%;
+    margin-bottom: 50px;
+  }
+  .col2 .controller {
+    width: 77%;
+  }
+  .color-box {
+    transform: translateX(75px);
+  }
+  .col1 {
+    flex-basis: 100%;
+  }
+  .col1 h2 {
+    font-size: 35px;
+  }
+  .col1 h3 {
+    font-size: 15px;
   }
 }
